   and mark other functions as 'deprecated'. The gate passed to send() could be
   that of another module [~sendDirect()] and either an input or an output gate;
   the delay argument would be interpreted as propagation delay until the msg
   reaches that gate. I didn't implement it for now because I felt such a very
   general function would cause confusion for simulation programmers,
   but I'd like to hear more opinions about this...)
 - multi-stage initialization support added. Modules have two new functions
   which can be redefined by the user:
      void initialize(int stage);
      int numInitStages();
   At the beginning of the simulation, initialize(0) is called for all modules,
   then initialize(1), initialize(2), etc. For each module, numInitStages()
   must be redefined to return the number of init stages required, e.g. for a
   two-stage init, numInitStages() should return 2, and initialize(int stage)
   must be implemented to handle the stage=0 and stage=1 cases.
   callInitialize() now performs the full multi-stage initialization for that
   module and all its submodules.
   Multi-stage initialization defaults to the good old single-stage initialize()
   function (without args): the default numInitStages() returns 1, and the
   default initialize(int stage) simply calls initialize().
------ omnetpp-2.0b4 released ------
Jun 4, 2000
 - fix: cPar::setfunction() improved and made const-correct (for gcc 2.95.2)
 - warnings eliminated from cllist.cc & coutvect.cc
------ omnetpp-2.0b5 released ------
Jan 3, 2000
 - number of cQueue methods made virtual to enable customizing cQueue
   (e.g. adding statistics for maintaining average queue length, etc.)
   [suggested by Holger Karl]
 - added static counters to the cMessage class (total_msgs, live_msgs);
   these variables are incremented/decremented by the cMessage constructor
   and destructor, and displayed in Tkenv. They can be very handy at
   checking for memory leaks.